css changes and html indentation fixed

--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,8 @@
     </header>
     <br>
     <div>
-        <h2 id="contato">Entre em Contato conosco</h2>
-        <h3 id="contato">Quer esclarecer algo? Entre em contato agora mesmo!</h3>
+        <h2 class="contato">Entre em Contato conosco</h2>
+        <h3 class="contato">Quer esclarecer algo? Entre em contato agora mesmo!</h3>
         <form id="form">
             <label for="fname">Nome:</label><br>
             <input type="text" id="username" name="uname"><br>
