--- a/produtos.html
+++ b/produtos.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Mania Games</title>
     <meta name="description" content="Site Mania Games" />
@@ -35,8 +36,7 @@
         <input type="text" placeholder="Pesquisar.."> <input type="submit" value="Ir"><br>
     </div>
     <section>
-        <div>
-            <div class="listaprodutos">
+            <div class="listaprodutos container">
                 <div class="produtos">
                     <a href=""><img class="imagemprod" src="img/xboxone.jpg"></a>
                     <h4>Xbox One 500GB</h4>
@@ -76,7 +76,9 @@
         </footer>
     </div>
 </body>
-<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+    crossorigin="anonymous"></script>
 <script type="text/javascript" src="js/scripts.js"></script>
 
 </html>
