fixed divs and sections

--- a/produtos.html
+++ b/produtos.html
@@ -36,32 +36,35 @@
         <input type="text" placeholder="Pesquisar.."> <input type="submit" value="Ir"><br>
     </div>
     <section>
-            <div class="listaprodutos container">
-                <div class="produtos">
-                    <a href=""><img class="imagemprod" src="img/xboxone.jpg"></a>
-                    <h4>Xbox One 500GB</h4>
-                    <p>R$ 2500,00</p>
-                    <a href="">
-                        <h3 class="button">Comprar</h3>
-                    </a>
-                </div>
-                <div class="produtos">
-                    <a href=""><img class="imagemprod" src="img/ps4.jpg"></a>
-                    <h4>Playstation 4 500GB</h4>
-                    <p>R$ 2500,00</p>
-                    <a href="">
-                        <h3 class="button">Comprar</h3>
-                    </a>
-                </div>
-                <div class="produtos">
-                    <a href=""><img class="imagemprod" src="img/notebookstart.jpg"></a>
-                    <h4>Notebook Gamer "Start"</h4>
-                    <p>R$ 3500,00</p>
-                    <a href="">
-                        <h3 class="button">Comprar</h3>
-                    </a>
-                </div>
+        <div class="listaprodutos container">
+            <div class="produtos">
+                <a href=""><img class="imagemprod" src="img/xboxone.jpg"></a>
+                <h4>Xbox One 500GB</h4>
+                <p>Descrição</p>
+                <p>R$ 2500,00</p>
+                <a href="">
+                    <h3 class="button">Comprar</h3>
+                </a>
             </div>
+            <div class="produtos">
+                <a href=""><img class="imagemprod" src="img/ps4.jpg"></a>
+                <h4>Playstation 4 500GB</h4>
+                <p>Descrição</p>
+                <p>R$ 2500,00</p>
+                <a href="">
+                    <h3 class="button">Comprar</h3>
+                </a>
+            </div>
+            <div class="produtos">
+                <a href=""><img class="imagemprod" src="img/notebookstart.jpg"></a>
+                <h4>Notebook Gamer "Start"</h4>
+                <p>Descrição</p>
+                <p>R$ 3500,00</p>
+                <a href="">
+                    <h3 class="button">Comprar</h3>
+                </a>
+            </div>
+        </div>
     </section>
     <div class="rodape">
         <br>
