--- a/register.html
+++ b/register.html
@@ -16,15 +16,18 @@
 <body>
     <header>
         <div class="cabecalho">
-            <h1 id="name">Mania Games
-                <div class="menuham"></div>
-                <div class="menuham"></div>
-                <div class="menuham"></div>
-                <nav class="menutop">
-                    <a href="index.html">Início</a>
-                    <a href="produtos.html">Produtos</a>
-                    <a href="contact.html">Contato</a>
-                    <a href="login.html">Login</a>
+            <h1 class="name">Mania Games
+                <nav id="menu" class="menutop">
+                    <a onclick="mostrarMenu()" class="barras" href=""><svg xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 448 512">
+                            <!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+                            <path
+                                d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z" />
+                        </svg></a>
+                    <a class="options" href="index.html">Início</a>
+                    <a class="options" href="produtos.html">Produtos</a>
+                    <a class="options" href="contact.html">Contato</a>
+                    <a class="options" href="login.html">Login</a>
                 </nav>
             </h1>
         </div>
