--- a/contact.html
+++ b/contact.html
@@ -17,17 +17,17 @@
     <header>
         <div class="cabecalho">
             <h1 class="name">Mania Games
+                <a onclick="mostrarMenu()" class="barras" href=""><svg xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 448 512">
+                        <!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+                        <path
+                            d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z" />
+                    </svg></a>
                 <nav id="menu" class="menutop">
-                    <a onclick="mostrarMenu()" class="barras" href=""><svg xmlns="http://www.w3.org/2000/svg"
-                            viewBox="0 0 448 512">
-                            <!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
-                            <path
-                                d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z" />
-                        </svg></a>
-                    <a class="options" href="index.html">Início</a>
-                    <a class="options" href="produtos.html">Produtos</a>
-                    <a class="options" href="contact.html">Contato</a>
-                    <a class="options" href="login.html">Login</a>
+                    <a href="index.html">Início</a>
+                    <a href="produtos.html">Produtos</a>
+                    <a href="contact.html">Contato</a>
+                    <a href="login.html">Login</a>
                 </nav>
             </h1>
         </div>
@@ -36,7 +36,7 @@
     <div>
         <h2 class="contato">Entre em Contato conosco</h2>
         <h3 class="contato">Quer esclarecer algo? Entre em contato agora mesmo!</h3>
-        <form id="form">
+        <form class="form">
             <label for="fname">Nome:</label><br>
             <input type="text" id="username" name="uname"><br>
             <label for="lname">E-mail:</label><br>
@@ -48,18 +48,16 @@
     </div>
     <br>
     <br>
-    <div class="rodape">
-        <br>
-        <br>
-        <br>
-        <footer>
-            © Mania Games 2022 <br>
-            <a href="https://www.instagram.com/"><img class="socials" src="img/inst.png" alt="Instagram"></a>
-            <a href="https://www.facebook.com/"><img class="socials" src="img/fb.png" alt="Facebook"></a> <br>
-            (99) 99999-9999 <br>
-            Rua Tal, n°0, Cidade - Estado
-        </footer>
-    </div>
+    <br>
+    <br>
+    <br>
+    <footer>
+        © Mania Games 2022 <br>
+        <a href="https://www.instagram.com/"><img class="socials" src="img/inst.png" alt="Instagram"></a>
+        <a href="https://www.facebook.com/"><img class="socials" src="img/fb.png" alt="Facebook"></a> <br>
+        (99) 99999-9999 <br>
+        Rua Tal, n°0, Cidade - Estado
+    </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
