--- a/contact.html
+++ b/contact.html
@@ -38,11 +38,11 @@
         <h3 class="contato">Quer esclarecer algo? Entre em contato agora mesmo!</h3>
         <form class="form">
             <label for="fname">Nome:</label><br>
-            <input type="text" id="username" name="uname"><br>
+            <input type="text" name="uname" required><br>
             <label for="lname">E-mail:</label><br>
-            <input type="text" id="useremail" name="uemail"><br>
+            <input type="email" name="uemail" required><br>
             <label for="lname">Descreva o seu problema:</label><br>
-            <input type="text" id="userproblem" name="uprob"><br><br>
+            <input type="text" name="uprob" required><br><br>
             <input type="submit" value="Enviar"><br>
         </form>
     </div>
