--- a/login.html
+++ b/login.html
@@ -37,11 +37,13 @@
         <h2>Sua Conta</h2>
         <h3>Entre em sua conta</h3>
         <h4>Não tem conta? <a class="register" href="register.html">Clique aqui</a> para se cadastrar!</h4>
-        <label for="uemail">E-mail:</label><br>
-        <input type="email" id="useremaillogin" name="uemaillogin"><br>
-        <label for="upassword">Senha:</label><br>
-        <input type="password" id="userpassword" name="upassword"><br><br>
-        <input type="submit" value="Entrar"><br>
+        <form class="form">
+            <label for="uemail">E-mail:</label><br>
+            <input type="email" name="uemaillogin" required><br>
+            <label for="upassword">Senha:</label><br>
+            <input type="password" name="upassword" required><br><br>
+            <input type="submit" value="Entrar"><br>
+        </form>
     </div>
     <br>
     <br>
