add produtos.html form

--- a/produtos.html
+++ b/produtos.html
@@ -36,7 +36,9 @@
     <div class="nossosprods">
         <h2>Nossos Produtos</h2>
         <h3>Busque por milhares de produtos de qualidade em nossa loja!</h3>
-        <input type="text" placeholder="Pesquisar.."> <input type="submit" value="Ir"><br>
+        <form class="form">
+            <input type="text" placeholder="Pesquisar.." required> <input type="submit" value="Ir"><br>
+        </form>
     </div>
     <section class="setores">
         <div class="listaprodutos container">
