--- a/produtos.html
+++ b/produtos.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Mania Games</title>
     <meta name="description" content="Site Mania Games" />
-    <meta name="keywords" content="Mania, Games, Jogos, Xbox, Playstation, PC" />
+    <meta name="keywords" content="Mania, Games, Jogos, Xbox, Playstation, PC, Notebook, Start, Gamer" />
     <meta name="author" content="Guilherme Rocha" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
