--- a/contact.html
+++ b/contact.html
@@ -36,14 +36,14 @@
     <div>
         <h2 class="contato">Entre em Contato conosco</h2>
         <h3 class="contato">Quer esclarecer algo? Entre em contato agora mesmo!</h3>
-        <form class="form">
+        <form id="form" class="form" method="POST" action="index.html">
             <label for="fname">Nome:</label><br>
             <input type="text" name="uname" required><br>
             <label for="lname">E-mail:</label><br>
             <input type="email" name="uemail" required><br>
             <label for="lname">Descreva o seu problema:</label><br>
             <input type="text" name="uprob" required><br><br>
-            <input type="submit" value="Enviar"><br>
+            <input type="submit" value="Enviar" onclick="clickContact()"><br>
         </form>
     </div>
     <br>
