add html target blank

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <br>
     <footer>
         © Mania Games 2022 <br>
-        <a href="https://www.instagram.com/"><img class="socials" src="img/inst.png" alt="Instagram"></a>
-        <a href="https://www.facebook.com/"><img class="socials" src="img/fb.png" alt="Facebook"></a> <br>
+        <a target="_blank" href="https://www.instagram.com/"><img class="socials" src="img/inst.png" alt="Instagram"></a>
+        <a target="_blank" href="https://www.facebook.com/"><img class="socials" src="img/fb.png" alt="Facebook"></a> <br>
         (99) 99999-9999 <br>
         Rua Tal, n°0, Cidade - Estado
     </footer>
