add jquery carousel

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <br>
     <div class="produto">
         <h2>Produtos em Destaque</h2>
-        <img src="img/xboxone.jpg" alt="Xbox One 500GB" class="produtoimg">
-        <h3>Xbox One 500GB - R$2500,00</h3>
+        <section class="produtoimg produtoimg-xbox"></section>
+        <h3>Produto - R$0000,00</h3>
     </div>
     <br>
     <br>
