add input placeholder

--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
             <label for="fname">Nome:</label><br>
             <input type="text" name="uname" required><br>
             <label for="lname">E-mail:</label><br>
-            <input type="email" name="uemail" required><br>
+            <input type="email" placeholder="name@example.com" name="uemail" required><br>
             <label for="lname">Descreva o seu problema:</label><br>
             <input type="text" name="uprob" required><br><br>
             <input type="submit" value="Enviar" onclick="clickContact()"><br>
