--- a/register.html
+++ b/register.html
@@ -50,7 +50,7 @@
             <label for="uname">Nome:</label><br>
             <input type="text" name="unamelogin" required><br>
             <label for="uemail">E-mail:</label><br>
-            <input type="email" name="uemaillogin" required><br>
+            <input type="email" placeholder="name@example.com" name="uemaillogin" required><br>
             <label for="upassword">Senha:</label><br>
             <input type="password" name="upassword" required><br><br>
             <input type="submit" value="Criar Conta" onclick="clickRegister()"><br>
