--- a/login.html
+++ b/login.html
@@ -49,7 +49,7 @@
         <h4>Não tem conta? <a class="register" href="register.html">Clique aqui</a> para se cadastrar!</h4>
         <form id="form" class="form" method="POST" action="index.html">
             <label for="uemail">E-mail:</label><br>
-            <input type="email" name="uemaillogin" required><br>
+            <input type="email" placeholder="name@example.com" name="uemaillogin" required><br>
             <label for="upassword">Senha:</label><br>
             <input type="password" name="upassword" required><br><br>
             <input type="submit" value="Entrar" onclick="clickLogin()"><br>
