add more input placeholders

--- a/contact.html
+++ b/contact.html
@@ -48,11 +48,11 @@
         <h3 class="contato">Quer esclarecer algo? Entre em contato agora mesmo!</h3>
         <form id="form" class="form" method="POST" action="index.html">
             <label for="fname">Nome:</label><br>
-            <input type="text" name="uname" required><br>
+            <input type="text" placeholder="Seu nome" name="uname" required><br>
             <label for="lname">E-mail:</label><br>
             <input type="email" placeholder="name@example.com" name="uemail" required><br>
             <label for="lname">Descreva o seu problema:</label><br>
-            <input type="text" name="uprob" required><br><br>
+            <input type="text" placeholder="Escreva seu problema" name="uprob" required><br><br>
             <input type="submit" value="Enviar" onclick="clickContact()"><br>
         </form>
     </div>
