--- a/login.html
+++ b/login.html
@@ -51,7 +51,7 @@
             <label for="uemail">E-mail:</label><br>
             <input type="email" placeholder="name@example.com" name="uemaillogin" required><br>
             <label for="upassword">Senha:</label><br>
-            <input type="password" name="upassword" required><br><br>
+            <input type="password" placeholder="Digite sua senha" name="upassword" required><br><br>
             <input type="submit" value="Entrar" onclick="clickLogin()"><br>
         </form>
     </div>
