changed meta keywords

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>Mania Games</title>
     <meta name="description" content="Site Mania Games" />
-    <meta name="keywords" content="Mania, Games, Jogos, Xbox, Playstation, PC, Notebook, Start, Gamer" />
+    <meta name="keywords" content="Mania, Games, Jogos, Xbox, Playstation, PC, Notebook, Start, Gamer, Produtos" />
     <meta name="author" content="Guilherme Rocha" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
