changed meta description

--- a/produtos.html
+++ b/produtos.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Mania Games</title>
-    <meta name="description" content="Site Mania Games" />
+    <meta name="description" content="Produtos Mania Games" />
     <meta name="keywords" content="Mania, Games, Jogos, Xbox, Playstation, PC, Notebook, Start, Gamer, Comprar, Produtos" />
     <meta name="author" content="Guilherme Rocha" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
