changed htmls titles

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Mania Games</title>
+    <title>Mania Games - Contato</title>
     <meta name="description" content="Suporte Mania Games" />
     <meta name="keywords" content="Mania, Games, Jogos, Xbox, Playstation, PC, Notebook, Start, Gamer, Contato, Suporte, Problema" />
     <meta name="author" content="Guilherme Rocha" />
