--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Mania Games</title>
+    <title>Mania Games - Cadastrar</title>
     <meta name="description" content="Registro Mania Games" />
     <meta name="keywords" content="Mania, Games, Jogos, Xbox, Playstation, PC, Notebook, Start, Gamer, Conta, Registro, Cadastro" />
     <meta name="author" content="Guilherme Rocha" />
