--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Mania Games</title>
+    <title>Mania Games - Início</title>
     <meta name="description" content="Página Inicial Mania Games" />
     <meta name="keywords" content="Mania, Games, Jogos, Xbox, Playstation, PC, Notebook, Start, Gamer, Produtos" />
     <meta name="author" content="Guilherme Rocha" />
