--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Mania Games</title>
+    <title>Mania Games - Entrar</title>
     <meta name="description" content="Login Mania Games" />
     <meta name="keywords" content="Mania, Games, Jogos, Xbox, Playstation, PC, Notebook, Start, Gamer, Conta, Login, Entrar, Cadastro" />
     <meta name="author" content="Guilherme Rocha" />
