--- a/produtos.html
+++ b/produtos.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Mania Games</title>
+    <title>Mania Games - Produtos</title>
     <meta name="description" content="Produtos Mania Games" />
     <meta name="keywords" content="Mania, Games, Jogos, Xbox, Playstation, PC, Notebook, Start, Gamer, Comprar, Produtos" />
     <meta name="author" content="Guilherme Rocha" />
